# ninja-schema

./: .coveragerc  .flake8  Makefile  README.md  mypy.ini  pyproject.toml  requirements-tests.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml  test_full.yml
django_schema/: __init__.py
django_schema/orm/: getters.py  model_schema.py
django_schema/orm/utils/: converter.py
ninja_extra_schema/: __init__.py  factory.py
ninja_extra_schema/orm/: __init__.py  factory.py  getters.py  model_schema.py  model_validators.py  schema.py  schema_registry.py
ninja_extra_schema/orm/utils/: converter.py  utils.py
ninja_extra_schema/pydanticutils/: __init__.py
ninja_extra_scheme/: factory.py
ninja_extra_scheme/orm/: __init__.py  factory.py  fields.py  model_schema.py  model_validators.py  schema.py
ninja_extra_scheme/orm/utils/: utils.py
ninja_schema/: __init__.py  compat.py  errors.py  types.py
ninja_schema/orm/: factory.py  getters.py  mixins.py  model_schema.py  model_validators.py  schema.py  schema_registry.py
ninja_schema/orm/utils/: converter.py  utils.py
ninja_schema/pydanticutils/: __init__.py
tests/: conftest.py  models.py  test_converters.py  test_custom_fields.py  test_model_schema.py  test_schema.py
tests/test_v1_pydantic/: test_converters.py  test_custom_fields.py  test_model_schema.py  test_schema.py
tests/test_v2_pydantic/: test_converters.py  test_custom_fields.py  test_factory.py  test_model_schema.py  test_schema.py
